--- a/views/enviar_correoSA.ejs
+++ b/views/enviar_correoSA.ejs
@@ -51,11 +51,9 @@
 </head>
 <body>
   <form action="/enviar_correoSA" method="POST">
-    <h1>Enviar Correo con contrato a Firmar</h1>
+    <h1>Enviar link para Firmar</h1>
     <label for="para">Para:</label>
     <input type="email" id="para" name="para" required>
-    <label for="mensaje">Mensaje:</label>
-    <textarea id="mensaje" name="mensaje" rows="4" required></textarea>
     <input type="hidden" id="mensajeConfigurado" name="mensajeConfigurado">
     
     <button type="submit">Enviar Correo</button>
