--- a/views/enviar_correoSA.ejs
+++ b/views/enviar_correoSA.ejs
@@ -47,15 +47,26 @@
     button:hover {
       background-color: #0056b3;
     }
+    ul {
+      list-style-type: none;
+      padding: 0;
+    }
+    li {
+      margin-bottom: 5px;
+    }
   </style>
 </head>
 <body>
   <form action="/enviar_correoSA" method="POST">
-    <h1>Enviar link para Firmar</h1>
-    <label for="para">Para:</label>
-    <input type="email" id="para" name="para" required>
-    <input type="hidden" id="mensajeConfigurado" name="mensajeConfigurado">
-    
+    <h1>
+      Confirmación de Correo
+    </h1>
+    <ul>
+      <!-- Aquí se mostrará la lista de correos cargados -->
+      <% correos.forEach((usuario, index) => { %>
+        <li><%= index + 1 %>. <%= usuario.correo %></li>
+      <% }); %>
+    </ul>
     <button type="submit">Enviar Correo</button>
   </form>
 </body>
