--- a/views/enviar_correo.ejs
+++ b/views/enviar_correo.ejs
@@ -54,10 +54,16 @@
     <h1>Enviar documentos por correo electrónico</h1>
     <label for="para">Para:</label>
     <input type="email" id="para" name="para" required>
-    
-    <% if (adjunto) { %>
-      <p>Adjunto: <%= adjunto.originalname %></p>
+
+    <% if (adjunto && adjunto.adjuntos.length > 0) { %>
+      <p>Archivos adjuntos:</p>
+      <ul>
+        <% adjunto.adjuntos.forEach(adjunto => { %>
+          <li><%= adjunto %></li>
+        <% }); %>
+      </ul>
     <% } %>
+
     <button type="submit">Enviar Correo</button>
   </form>
 </body>
