--- a/views/enviar_correoSA.ejs
+++ b/views/enviar_correoSA.ejs
@@ -58,7 +58,7 @@
 </head>
 <body>
   <form action="/enviar_correoSA" method="POST">
-    <h1>Enviar Correo SA</h1>
+    <h1>Enviar Correo </h1>
     <!-- <label for="correo">Correo</label>
     <ul>
         <% correos.forEach(Empleado => { %>
